src/test/resources/miniJava/Test25.mjava
class Test24 {
	public static void main(String[] args){
		String s = new String(); // error
	}
}
